Came up with solution to the problem that touch scrolling on the threejs screen would rotate the camera so there would be no way to get to the next page. To solve this I added a downward arrow that I will have scroll to the next section with a higher zindex. Have a good design for the side nav but maybe will refactor so it can be hidden on mobile.

--- a/src/sass/entireTheme.scss
+++ b/src/sass/entireTheme.scss
@@ -106,10 +106,10 @@
   * contexts in Firefox 4+, Safari 5, and Chrome.
   */
  
- h1 {
-     font-size: 2em;
-     margin: 0.67em 0;
- }
+//  h1 {
+//      font-size: 2em;
+//      margin: 0.67em 0;
+//  }
  
  /**
   * Address styling not present in IE 8/9, Safari 5, and Chrome.
